[tool.poetry]
name = "secret-guardian"
authors = ["dev-Lesser"]
version = "0.1.0"
description = "Handle Secret Values with Secret String and Cloud Manage Service"

license = "MIT"

readme = "README.md"

include = [
    { path = "tests", format = "sdist" }
]


keywords = ["secret", "secret-manager", "secret-guardian"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.build]
generate-setup-file = false
# Requirements
[tool.poetry.dependencies]
python = "^3.9"
loguru="^0.5.0"
boto3="1.34.51"
toml="^0.10.2"
pydantic="^2.5"
pytest="^8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.8"
pytest-mock = "^3.5"
pre-commit = { version = "^2.6", python = "^3.6.1" }
tox = "^3.0"
pytest-sugar = "^0.9"
httpretty = "^1.0"
zipp = { version = "^3.4", python = "<3.8"}
deepdiff = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
